[package]
name = "advent_of_code_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
counter = "0.7.0"
geo = "0.32.0"
itertools = "0.14.0"
lpsolve = "1.0.1"
num-traits = "0.2.19"
petgraph = "0.8.3"
rayon = "1.11.0"
rustc-hash = "2.1.1"
sscanf = "0.4.4"
